[package]
name = "vulkan_starter"
version = "0.1.0"
authors = ["Bradley Lyman <lyman.brad3211@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
flexi_logger = "0.17.1"
log = "0.4.13"
vk-sys = "0.5.3"
vulkano = "*"
vulkano-shaders = "0.20.0"
vulkano-win = "0.20.0"
winit = "0.24.0"
nalgebra = "0.24.1"
rand = "0.8.3"

[dependencies.textwrap]
version = "0.13.2"
features = ["terminal_size"]

